fix category card label alignment

--- a/src/app/main-customer/main-customer.component.css
+++ b/src/app/main-customer/main-customer.component.css
@@ -41,7 +41,7 @@
     letter-spacing: .5em;
     background-clip: text;
     text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
-    top: 50%;
+    top: 45%;
 }
 
 .campaign-item {
